--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ html {
   --title-text-color: #212121;
   --accent-color: #2196f3;
   --second-background-color: #f5f4fa;
+  --background-color: #ffffff;
   --second-text-color: #ffffff;
 }
 body {
@@ -24,7 +25,7 @@ body {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
-  background-color: #ffffff;
+  background-color: var(--background-color);
   margin: 0;
 }
 p,
@@ -257,6 +258,9 @@ ul {
 .sections p {
   margin-top: 10px;
 }
+.sections-team {
+  background-color: var(--second-background-color);
+}
 /* подзаголовки под фото секции наша комаанда  */
 .sections-title-team {
   font-weight: 500;
@@ -273,6 +277,13 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   margin-top: 10px;
+}
+.team-card {
+  background-color: var(--background-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  padding-bottom: 30px;
 }
 
 /* футер */
