--- a/css/styles.css
+++ b/css/styles.css
@@ -241,11 +241,7 @@ ul {
   display: flex;
   justify-content: space-between;
 }
-.team-list {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 94px;
-}
+
 /* заголовки в  секции особенности */
 .sections-title-feature {
   font-weight: 700;
@@ -261,6 +257,11 @@ ul {
 .sections-team {
   background-color: var(--second-background-color);
 }
+.team-list {
+  display: flex;
+  justify-content: space-between;
+}
+
 /* подзаголовки под фото секции наша комаанда  */
 .sections-title-team {
   font-weight: 500;
@@ -333,6 +334,15 @@ address {
 }
 
 /* стили для страницы портфолио */
+/* секция меню */
+.sections-title {
+  margin-top: 94px;
+  margin-bottom: 94px;
+}
+.filters-button {
+  display: flex;
+  justify-content: center;
+}
 .filters-button button {
   font-weight: 500;
   font-size: 16px;
@@ -349,6 +359,27 @@ address {
   background-color: var(--accent-color);
   color: var(--second-text-color);
 }
+
+.filters-item {
+  background-color: var(--second-background-color);
+  border-radius: 4px;
+}
+
+button {
+  border: 0;
+  border-radius: 4px;
+}
+.filters-button .filters-item + .filters-item {
+  margin-left: 8px;
+}
+
+/* секция проекты студии */
+
+.flex-conteiner {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .project-title {
   font-weight: 700;
   font-size: 18px;
