--- a/css/styles.css
+++ b/css/styles.css
@@ -67,6 +67,9 @@ ul {
   padding: 0;
   margin: 0;
 }
+img {
+  display: block;
+}
 
 /* логотип WebStudio*/
 .logo {
@@ -78,8 +81,8 @@ ul {
   line-height: 1.19;
   letter-spacing: 0.03em;
   color: #000000;
-  margin-top: 24px;
-  margin-bottom: 25px;
+  padding-top: 24px;
+  padding-bottom: 25px;
   margin-right: 93px;
 }
 
@@ -118,8 +121,8 @@ ul {
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   cursor: pointer;
-  margin-top: 32px;
-  margin-bottom: 32px;
+  padding-top: 32px;
+  padding-bottom: 32px;
 }
 .site-navig :hover,
 .site-navig :focus {
@@ -213,7 +216,8 @@ ul {
 
 /* sections */
 
-.sections,
+.sections-feature,
+.sections-work,
 .sections-team {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -221,10 +225,12 @@ ul {
 
 .feature-list {
   display: flex;
-  margin-bottom: 94px;
 }
 .feature-item {
   margin-right: 30px;
+}
+.feature-item:last-child {
+  margin-right: 0;
 }
 /* заголовки второго уровня */
 .sections-title-second {
@@ -235,11 +241,6 @@ ul {
   letter-spacing: 0.03em;
   color: var(--title-text-color);
   margin-bottom: 50px;
-}
-
-.work-list {
-  display: flex;
-  justify-content: space-between;
 }
 
 /* заголовки в  секции особенности */
@@ -254,15 +255,34 @@ ul {
 .sections p {
   margin-top: 10px;
 }
+/* секция чем мы занимаемся */
+.sections-work {
+  padding-top: 0;
+}
+.work-list {
+  display: flex;
+}
+.work-item {
+  width: 370px;
+  margin-right: 30px;
+}
+.work-item:last-child {
+  margin-right: 0;
+}
+
 .sections-team {
   background-color: var(--second-background-color);
 }
 .team-list {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
 }
 
 /* подзаголовки под фото секции наша комаанда  */
+.team-footer {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 .sections-title-team {
   font-weight: 500;
   font-size: 16px;
@@ -270,21 +290,25 @@ ul {
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  margin-top: 30px;
+  margin-bottom: 10px;
 }
-.sections-team p {
+.team-footer p {
   font-size: 16px;
   line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  margin-top: 10px;
 }
 .team-card {
+  width: 270px;
   background-color: var(--background-color);
+  border-bottom: ;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  padding-bottom: 30px;
+  margin-right: 30px;
+}
+.team-card:last-child {
+  margin-right: 0;
 }
 
 /* футер */
@@ -325,6 +349,7 @@ address {
 }
 /* ауторизация в футере */
 .footer-navig-link {
+  display: block;
   color: rgba(255, 255, 255, 0.6);
   margin-top: 9px;
 }
@@ -342,6 +367,7 @@ address {
 .filters-button {
   display: flex;
   justify-content: center;
+  margin-bottom: 34px;
 }
 .filters-button button {
   font-weight: 500;
@@ -352,6 +378,8 @@ address {
   color: var(--title-text-color);
   background-color: var(--second-background-color);
   cursor: pointer;
+  border: 0;
+  border-radius: 4px;
 }
 .filters-button .link.current,
 .filters-button button:hover,
@@ -365,30 +393,43 @@ address {
   border-radius: 4px;
 }
 
-button {
-  border: 0;
-  border-radius: 4px;
-}
 .filters-button .filters-item + .filters-item {
   margin-left: 8px;
 }
 
 /* секция проекты студии */
 
-.flex-conteiner {
+.project-container {
   display: flex;
   flex-wrap: wrap;
 }
 
+.project-item {
+  width: 370px;
+  margin-bottom: 30px;
+  margin-right: 30px;
+  border: 1px solid #eeeeee;
+}
+.project-item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.project-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
 .project-title {
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
   color: var(--title-text-color);
+  margin-bottom: 4px;
 }
-.project p {
+.project-footer p {
   font-size: 16px;
   line-height: 1.87;
   letter-spacing: 0.03em;
+}
+.project-footer {
+  padding: 20px 24px;
 }
