--- a/css/styles.css
+++ b/css/styles.css
@@ -228,6 +228,7 @@ img {
   display: flex;
 }
 .feature-item {
+  width: 270;
   margin-right: 30px;
 }
 .feature-item:last-child {
@@ -349,10 +350,12 @@ address {
   color: var(--accent-color);
 }
 /* ауторизация в футере */
+.footer-navig {
+  margin-top: 9px;
+}
 .footer-navig-link {
   display: block;
   color: rgba(255, 255, 255, 0.6);
-  margin-top: 9px;
 }
 .footer-navig .link:hover,
 .footer-navig .link:focus {
@@ -389,12 +392,12 @@ address {
   background-color: var(--accent-color);
   color: var(--second-text-color);
 }
-.filters-item .current {
+/* .filters-item .current {
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
-}
+} */
 .filters-item {
   border-radius: 4px;
   background-color: var(--second-background-color);
