--- a/css/styles.css
+++ b/css/styles.css
@@ -228,7 +228,7 @@ img {
   display: flex;
 }
 .feature-item {
-  width: 270;
+  width: 270px;
   margin-right: 30px;
 }
 .feature-item:last-child {
